[gd_scene load_steps=10 format=2]

[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/GameOverView.gd" type="Script" id=2]
[ext_resource path="res://sounds/key_pressed.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/bgm_game_clear.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 1 )

[node name="GameClearView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameClearLabel" type="Label" parent="VBox"]
margin_top = 28.0
margin_right = 512.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.533333, 1 )
text = "game clear"
align = 1
uppercase = true

[node name="ResultsContainer" type="VBoxContainer" parent="VBox"]
margin_top = 106.0
margin_right = 512.0
margin_bottom = 200.0
custom_constants/separation = 10

[node name="HighScore" type="Label" parent="VBox/ResultsContainer"]
margin_right = 512.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "High Score: 0"
align = 1
uppercase = true

[node name="LastScore" type="Label" parent="VBox/ResultsContainer"]
margin_top = 26.0
margin_right = 512.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Last Score: 0"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighLevel" type="Label" parent="VBox/ResultsContainer"]
margin_top = 52.0
margin_right = 512.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 4 )
text = "High Level: 0"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastLevel" type="Label" parent="VBox/ResultsContainer"]
margin_top = 78.0
margin_right = 512.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 3 )
text = "Last Level: 0"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="VBox"]
margin_top = 230.0
margin_right = 512.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.745098, 0.745098, 1 )
text = "To Continue Press Enter
To Quit Press Q
"
align = 1

[node name="KeySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="GameClearBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
autoplay = true
